--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-name: Run Tests
+name: Run Tests and Tag Version
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build:
@@ -35,7 +34,11 @@ jobs:
         export DISPLAY=:99
         bash run_tests.sh
 
-    - name: Check Exit Code
-      if: failure()
-      run: echo "Tests failed with exit code $?"
-
+    - name: Check Exit Code and Tag Version
+      if: success()
+      run: |
+        VERSION=$(date +'%Y%m%d%H%M%S')
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git tag -a "v$VERSION" -m "Release v$VERSION"
+        git push origin "v$VERSION"
