--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Run Tests and Tag Version
 on:
   push:
     branches:
-      - main  # oder 'master', je nach Ihrem Branch-Namen
+      - master  # oder 'master', je nach Ihrem Branch-Namen
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
