--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
         VERSION=$(date +'%Y%m%d%H%M%S')
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
-        git tag -a "v$VERSION" -m "Release v$VERSION"
+        git tag ${{ github.run_number }} || true
         git push origin "v$VERSION"
