--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Dependencies
+      - name: Install Dependencies (Linux)
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser x11-apps
@@ -27,25 +27,54 @@ jobs:
           bash tests/smoke_tests
 
   playwright:
-    runs-on: ubuntu-latest
     needs: smoke-tests
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Dependencies
+      - name: Install Dependencies (Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser x11-apps
 
-      - name: Run Playwright Tests
+      - name: Install Dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install --cask chromium
+          brew install xvfb || true
+
+      - name: Install Dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          choco install chromium
+
+      - name: Run Playwright Tests (Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo Xvfb :99 -ac &
           export DISPLAY=:99
           bash run_tests --no-smoke-tests
 
+      - name: Run Playwright Tests (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          Xvfb :99 -ac &
+          export DISPLAY=:99
+          bash run_tests --no-smoke-tests
+
+      - name: Run Playwright Tests (Windows)
+        if: runner.os == 'Windows'
+        shell: bash
+        run: |
+          bash run_tests --no-smoke-tests
+
       - name: Create a new version
-        if: ${{ success() }}
+        if: ${{ success() && matrix.os == 'ubuntu-latest' }}
         run: |
           echo "Creating new version"
           git tag ${{ github.run_number }} || true
