--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,11 @@ jobs:
           bash tests/smoke_tests
 
   playwright:
-    runs-on: ubuntu-latest
     needs: smoke-tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, ubuntu-24.04]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -36,7 +39,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser x11-apps
+          sudo apt-get install -y chromium-browser x11-apps firefox
 
       - name: Run Playwright Tests (Chromium)
         run: |
