--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,14 +42,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04, windows-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest, windows-latest]
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
       # ---- Linux ----
-      - name: Install System Dependencies (Linux)
+      - name: Setup Linux Dependencies
         if: runner.os == 'Linux'
         shell: bash
         run: |
@@ -57,35 +57,46 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser x11-apps php-cli
 
-          # Optional: disable man-db
-          sudo apt-get purge -y man-db || true
-          sudo rm -f /var/lib/man-db/auto-update || true
-          sudo mkdir -p /etc/dpkg/dpkg.cfg.d
-          echo 'path-exclude /usr/share/man/*' | sudo tee /etc/dpkg/dpkg.cfg.d/99disable-man-db
+          # Dynamische .env erzeugen
+          echo "APP_ENV=ci" > .env
+          echo "APP_DEBUG=false" >> .env
+
+          # Starte PHP Webserver
+          sudo php -S 0.0.0.0:8000 -t . &
+
+      # ---- macOS ----
+      - name: Setup macOS Dependencies
+        if: runner.os == 'macOS'
+        shell: bash
+        run: |
+          # Docker via brew und Colima
+          brew update
+          brew install --cask docker || true
+          brew install colima || true
+          colima start || true
+
+          # PHP lokal installieren
+          brew install php || true
+          php -v
 
           # Dynamische .env erzeugen
           echo "APP_ENV=ci" > .env
           echo "APP_DEBUG=false" >> .env
 
-          # Starte Webserver
-          sudo php -S 0.0.0.0:8000 -t . &
+          # Starte PHP Webserver
+          php -S 0.0.0.0:8000 -t . &
 
       # ---- Windows ----
-      - name: Install System Dependencies (Windows)
+      - name: Setup Windows Dependencies
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          # Install PHP via choco
           choco install php --no-progress -y
           php -v
-
-          # Dynamische .env erzeugen
           Set-Content -Path .env -Value "APP_ENV=ci`nAPP_DEBUG=false"
-
-          # Starte Webserver
           Start-Process php -ArgumentList "-S 0.0.0.0:8000 -t ." -NoNewWindow
 
-      # ---- Playwright ----
+      # ---- Playwright Installation ----
       - name: Install Python & Playwright
         shell: bash
         run: |
@@ -93,21 +104,20 @@ jobs:
           pip install playwright
           playwright install
 
+      # ---- Playwright Tests ----
       - name: Run Playwright Tests
         shell: bash
         run: |
           echo "Running Playwright tests on ${RUNNER_OS}"
-
-          if [ "${RUNNER_OS}" = "Linux" ]; then
+          if [ "${RUNNER_OS}" = "Linux" ] || [ "${RUNNER_OS}" = "macOS" ]; then
             sudo Xvfb :99 -ac &
             export DISPLAY=:99
             bash run_tests --no-smoke-tests --browser=chromium
-
           elif [ "${RUNNER_OS}" = "Windows" ]; then
             bash run_tests --no-smoke-tests --browser=chromium
           fi
 
-      # ---- Create Git Tag ----
+      # ---- Git Tagging ----
       - name: Create a new version
         if: ${{ success() }}
         shell: bash
